# Orthogonal-Constrained-One-Step-Alignment

./: .gitignore  README.md  pyproject.toml
examples/: prompts.txt
legacy/: generate_from_prompt_file_pickscore.py  test_time_oft_noise_sdxl_turbo_pickscore.py  test_time_oft_noise_sdxl_turbo_sdxlpipe_full.py
legacy_reference/test_time_inference/: build_oft_noise_sft_dataset.py  build_oft_noise_sft_dataset_multi_gpu.py  test_time_oft_noise_sd15_hyper_sft.py  test_time_oft_noise_sdxl_turbo_sft.py
scripts/: download_models.sh  download_reward_assets.py  run_assign_noise_sft_example.sh  run_build_assigned_dataset_example.sh  run_cifar_assign_example.sh  run_cifar_direct_sft_example.sh  run_cifar_em_latent_matched_sft_example.sh  run_cifar_gan_example.sh  run_cifar_latent_matched_sft_example.sh  run_clip_reward_example.sh  run_em_latent_matched_sft_example.sh  run_hpsv2_example.sh  run_imagereward_example.sh  run_latent_matched_sft_example.sh  run_mnist_assign_example.sh  run_mnist_direct_sft_example.sh  run_mnist_em_latent_matched_sft_example.sh  run_mnist_gan_example.sh  run_mnist_latent_matched_sft_example.sh  run_noise_theory_example.sh  run_pickscore_batch_example.sh
src/orthoAlign.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/orthoalign.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ttt_reward_models/: __init__.py  adapters.py  cifar_data.py  cifar_models.py  cifar_runners.py  cli_assign_sdxl_sft.py  cli_batch_pickscore.py  cli_build_assigned_noise_dataset.py  (+33 more)
src/ttt_reward_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+2 files in other folders)
